// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Variant expressions Check Variant 1`] = `
"
        (
            template_id (static_id 0 (\\"variant.test.ts\\" 20))
            storage (literal (bool True) (\\"variant.test.ts\\" 21))
            storage_type (())
            messages ((ep1 True False False True (\\"variant.test.ts\\" 23) ((set_type (params (\\"variant.test.ts\\" 23)) (variant ((prop1 \\"nat\\") (prop2 \\"unit\\")) (Some ((\\"prop1\\") (\\"prop2\\"))) (\\"\\" -1)) (\\"variant.test.ts\\" 28)) (set (data) (isVariant (params (\\"variant.test.ts\\" 23)) \\"prop2\\" (\\"variant.test.ts\\" 25)) (\\"variant.test.ts\\" 25)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"variant.test.ts\\" 20))
        )
        "
`;

exports[`Variant expressions Check Variant 2`] = `
"{
    \\"micheline\\": \\"parameter (or %ep1 (nat %prop1) (unit %prop2));\\\\nstorage   bool;\\\\ncode\\\\n  {\\\\n    CAR;        # @parameter\\\\n    # == ep1 ==\\\\n    # self.data = params.is_variant('prop2') # @parameter\\\\n    IF_LEFT\\\\n      {\\\\n        DROP;       # \\\\n        PUSH bool False; # bool\\\\n      }\\\\n      {\\\\n        DROP;       # \\\\n        PUSH bool True; # bool\\\\n      }; # bool\\\\n    NIL operation; # list operation : bool\\\\n    PAIR;       # pair (list operation) bool\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"bool\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"or\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\",
                            \\"annots\\": [
                                \\"%prop1\\"
                            ]
                        },
                        {
                            \\"prim\\": \\"unit\\",
                            \\"annots\\": [
                                \\"%prop2\\"
                            ]
                        }
                    ],
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CAR\\"
                    },
                    {
                        \\"prim\\": \\"IF_LEFT\\",
                        \\"args\\": [
                            [
                                {
                                    \\"prim\\": \\"DROP\\"
                                },
                                {
                                    \\"prim\\": \\"PUSH\\",
                                    \\"args\\": [
                                        {
                                            \\"prim\\": \\"bool\\"
                                        },
                                        {
                                            \\"prim\\": \\"False\\"
                                        }
                                    ]
                                }
                            ],
                            [
                                {
                                    \\"prim\\": \\"DROP\\"
                                },
                                {
                                    \\"prim\\": \\"PUSH\\",
                                    \\"args\\": [
                                        {
                                            \\"prim\\": \\"bool\\"
                                        },
                                        {
                                            \\"prim\\": \\"True\\"
                                        }
                                    ]
                                }
                            ]
                        ]
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ]
}"
`;

exports[`Variant expressions Open Variant 1`] = `
"
        (
            template_id (static_id 0 (\\"variant.test.ts\\" 9))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"variant.test.ts\\" 12) ((set_type (params (\\"variant.test.ts\\" 12)) (variant ((prop1 \\"nat\\") (prop2 \\"unit\\")) (Some ((\\"prop1\\") (\\"prop2\\"))) (\\"\\" -1)) (\\"variant.test.ts\\" 17)) (set (data) (openVariant (params (\\"variant.test.ts\\" 12)) \\"prop2\\" None (\\"variant.test.ts\\" 14)) (\\"variant.test.ts\\" 14)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"variant.test.ts\\" 9))
        )
        "
`;

exports[`Variant expressions Open Variant 2`] = `
"{
    \\"micheline\\": \\"parameter (or %ep1 (nat %prop1) (unit %prop2));\\\\nstorage   unit;\\\\ncode\\\\n  {\\\\n    CAR;        # @parameter\\\\n    # == ep1 ==\\\\n    # self.data = params.open_variant('prop2') # @parameter\\\\n    IF_LEFT\\\\n      {\\\\n        PUSH int 14; # int : @parameter%prop1\\\\n        FAILWITH;   # FAILED\\\\n      }\\\\n      {}; # @parameter%prop2\\\\n    NIL operation; # list operation : @parameter%prop2\\\\n    PAIR;       # pair (list operation) @parameter%prop2\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"or\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\",
                            \\"annots\\": [
                                \\"%prop1\\"
                            ]
                        },
                        {
                            \\"prim\\": \\"unit\\",
                            \\"annots\\": [
                                \\"%prop2\\"
                            ]
                        }
                    ],
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CAR\\"
                    },
                    {
                        \\"prim\\": \\"IF_LEFT\\",
                        \\"args\\": [
                            [
                                {
                                    \\"prim\\": \\"PUSH\\",
                                    \\"args\\": [
                                        {
                                            \\"prim\\": \\"int\\"
                                        },
                                        {
                                            \\"int\\": \\"14\\"
                                        }
                                    ]
                                },
                                {
                                    \\"prim\\": \\"FAILWITH\\"
                                }
                            ],
                            []
                        ]
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ]
}"
`;
